apps/base/billing-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing-service
  ports:
  - port: 80
    targetPort: 8080
